feat: recebe receita ao addcionar ao carrinho, caso o medicamento exija
