# mega_back/routes/sales.js
@@ -1,8 +1,10 @@
 const {app, express} = require('../expressApp');
 const router = express.Router();
+const multer = require('multer');
+const path = require('path');
 
 const dbPool = require('../dbConnection');
-const { DEFAULT_MESSAGE} = require("../myClasses");
+const { DEFAULT_MESSAGE } = require("../myClasses");
 
 //http codes 
 const OK = 200;
@@ -18,6 +20,19 @@ const SERVER_ERR = 500;
 //adicionar na tabela o campo reviwed: boolean
 //verfiicar se o medicamento precisa de receita, colcoar true em approval se nao precisar
 
+//localizada aqui temproariamente
+const fs = require('fs');
+
+function deleteFile(filePath){
+    fs.unlink(filePath, (err) => {
+        if (err) {
+          console.error('Error deleting the file:', err);
+        } else {
+          console.log('File deleted successfully!');
+        }
+      });
+}
+
 const insertIntoSales = `INSERT INTO sales (
     shopping_cart,
     date_time,
@@ -30,14 +45,15 @@ const appendToSalesCart = `UPDATE sales SET shopping_cart = array_append(shoppin
 const getSaleTotalQuery = `SELECT sale_total FROM sales WHERE id = $1`;
 const updateSaleTotalQuery = `UPDATE sales SET sale_total = $1 WHERE id = $2`
 
-const getMedPrice = `SELECT on_stock, unit_price FROM medications WHERE code = $1`;
+const getMedData = `SELECT needs_recipe, on_stock, unit_price FROM medications WHERE code = $1`;
 
 const insertIntoCart_item = `INSERT INTO cart_item (
     medicine_code,
     sold_amount,
     item_total,
+    recipe_path,
     approval_status
-    ) VALUES($1, $2, $3, $4) RETURNING id`;
+    ) VALUES($1, $2, $3, $4, $5) RETURNING id`;
 
 
 const deleteItemQuery = 'DELETE FROM cart_item WHERE id = $1';
@@ -53,31 +69,68 @@ async function updateSales(cartItem_id, item_total, sale_id){
 
 //if everything is fine retuns an obj with item total and its id
 //else, it return and obj with a message
-async function insertNewCart_item(medCode, item_qtd){
+function validateUpload(recipe_file, needs_recipe){
+    let recipeUrl = ``;
+    //se precisa de receita  e não recebeu uma
+    if(recipe_file == undefined && needs_recipe){
+        return {'message': "Este edicamente precisa de receita"};
+    }//se a receita tem arquivo inválido
+    else if(
+        recipe_file 
+        && needs_recipe 
+        && !/^image/.test(recipe_file.mimetype) 
+        && recipe_file.mimetype !== 'application/pdf'
+    ){
+        deleteFile(`./public/uploads/recipes/${recipe_file.filename}`);    //ele sobe o qruqivo de qualquer jeito, isso aqui deleta o que veio
+        return {'message': "O arquivo precisa ser uma imagem ou pdf"};
+    }else{
+        recipeUrl = `http://localhost:3001/uploads/recipes/${recipe_file.filename}`;
+        return {'url': recipeUrl}
+    } 
+}
+async function insertNewCart_item(medCode, item_qtd, recipe_file){
     let itemObj = {}
+    let approval_status = 'reprovada'; //can be: aprovada, revisando or reprovada
 
-    const approval_status = false;
-
-    let med_data = (await dbPool.query( getMedPrice, [medCode] ));
+    let med_data = (await dbPool.query( getMedData, [medCode] ));
+    //se o medicamento não existe
     if( !(med_data.rowCount > 0) ){
-        itemObj = {message: "Medicamento não encontrado" };
+        itemObj = { message: "Medicamento não encontrado" };
         return itemObj;
-    }
+    }//se não tem o suficient eno estoque
     if( !( med_data.rows[0].on_stock >= item_qtd ) ){
-        itemObj = {message: "Quantidade indisponível no estoque!" };
+        itemObj = { message: "Quantidade indisponível no estoque!" };
         return itemObj;
     }
 
+    //se precisa de receita verifica o upload de uma
+    let recipeUrl = '';
+    if(med_data.rows[0].needs_recipe){
+        console.log("PRECISA DE RECEITA")
+        const recipeValidation = validateUpload(recipe_file, med_data.rows[0].needs_recipe);
+
+        if(recipeValidation.message == undefined){
+            console.log(recipeValidation)
+            approval_status = 'revisando';
+            recipeUrl = recipeValidation.url;
+        }else{
+            console.log("TEVE MESSAGE")
+            itemObj = { message: recipeValidation.message };
+            return itemObj;
+        }
+    }else{
+        approval_status = 'aprovada';
+    }
+    
+//calcula o preço do item e insere item no banco
     const med_price = med_data.rows[0].unit_price
     let item_total = med_price * item_qtd;
-    let cartItem_id = (await dbPool.query(insertIntoCart_item,[medCode, item_qtd, item_total, approval_status])).rows[0].id;
 
+//insere no banco com todos os daods
+    let cartItem_id = (await dbPool.query(insertIntoCart_item,
+        [medCode, item_qtd, item_total, recipeUrl, approval_status])).rows[0].id;
     itemObj = { id: cartItem_id, total: item_total }
     return itemObj;
-}
-
-async function deleteItem(item_id){
-    await dbPool.query(deleteItemQuery, [item_id]);
 }
 
 //async function deleteSale(sale_id){
@@ -85,7 +138,25 @@ async function deleteItem(item_id){
 //  e um parametro indiciando se deleta a venda inteira ou só os itens
 //}
 
-router.post('/adicionarAoCarrinho', async (req, res) => {
+// Configure multer storage
+const storage = multer.diskStorage({
+    destination: (req, file, cb) => {
+      cb(null, './public/uploads/recipes/'); // Specify the directory where you want to save the files
+    },
+    filename: async (req, file, cb) => {
+      const originalName = file.originalname;
+      const extension = path.extname(originalName) || ''; // Get the original extension if it exists
+  
+      let finalExtension;
+      finalExtension = extension || '.bin'; // Default to .bin if no extension found
+  
+      // Create the file name with the determined extension
+      cb(null, path.basename(originalName, extension) + finalExtension);
+    }
+  });
+
+const uploadRecipe = multer({ storage: storage });
+router.post('/adicionarAoCarrinho', uploadRecipe.single('recipeFile'), async (req, res) => {
     try{
         res.header('Content-Type', 'application/json');
         
@@ -95,12 +166,17 @@ router.post('/adicionarAoCarrinho', async (req, res) => {
         if(client_id == undefined || client_id == ''){
             return res.status(UNAUTHORIZED).json( {message: "Usuario não logado!"} );
         }
-        if(item_qtd == 0){
+        if(medCode == undefined || medCode == ''){
+            return res.status(UNAUTHORIZED).json( {message: "Código do medicamento deve ser informado!!"} );
+        }
+        if(item_qtd == 0 || item_qtd == undefined || item_qtd == ''){
             return res.status(BAD_REQUEST).json( {message: "Quantidade do medicamento não informada!"} );
         }
-
-    //cria um mnovo item de carrinho 
-        const newItem = await insertNewCart_item(medCode, item_qtd);
+       
+    //cria um novo item de carrinho e verifica se deu erro
+        const recipe_file = req.file; //parece que isso faz o upload
+        console.log(recipe_file)
+        const newItem = await insertNewCart_item(medCode, item_qtd, recipe_file);
         if(newItem.message){
             return res.status(BAD_REQUEST).json( {message: newItem.message} );
         }
@@ -151,6 +227,9 @@ router.post('/verCarrinho', async (req, res) => {
         if(!client_id){
             return res.status(UNAUTHORIZED).json( {message: "Usuairo deve estar logado!"} );
         }
+        if(!sale_id){
+            return res.status(UNAUTHORIZED).json( {message: "Id da venda deve ser informado"} );
+        }
 
         const sale = await dbPool.query(findSaleQuery, [sale_id, client_id]);
         if(sale.rowCount == 0 || !sale_id){
@@ -172,7 +251,7 @@ router.post('/verCarrinho', async (req, res) => {
             'shopping_cart': shopping_cart
         }
 
-        res.status(OK).json( { data } );
+        res.status(OK).json( data );
 
     }catch(err){
         console.error('Erro na rota /listarMedicamentos', err);
@@ -205,5 +284,28 @@ router.post('/caixa', async (req, res) => {
     }
 });
 
+//TEMPORARIA
+async function deleteSale(sale_id){
 
+    const deleteSaleQuery = `DELETE FROM sales WHERE id = $1`;
+    const deleteItemQuery = `DELETE FROM cart_item WHERE id = $1`;
+    const getCartItemsQuery = `SELECT shopping_cart FROM sales WHERE id = $1`;
+
+    const items = ( await dbPool.query(getCartItemsQuery, [sale_id]) ).rows[0].shopping_cart;
+    for(const item of items){
+        await dbPool.query( deleteItemQuery, [item] );
+    }
+    await dbPool.query(deleteSaleQuery, [sale_id]);
+    
+}
+router.post("/apagar", (req, res) => {
+
+    const saleId = req.body.saleId;
+    
+    deleteSale(saleId);
+    res.send("Done!")
+})
+async function deleteItem(item_id){
+    await dbPool.query(deleteItemQuery, [item_id]);
+}
 module.exports = router
